# ezformant

./: .gitignore  AGENT.md  Cargo.toml  FUTURE_FEATURES.md  README.MD  app.js  audioWorker.js  formantWorker.mjs  index.html
.github/workflows/: deploy_webapp.yaml  deploy_webapp_premaster.yaml
benches/: benchmarks.rs  note.md
ezformant/: Cargo.toml
ezformant/src/: lib.rs  lpc.rs  pitch.rs
src/: lib.rs  lpc.rs  main.rs
webapp/: .biomeignore  .gitignore  Cargo.toml  app.js  biome.json  formantWorker.mjs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.worker.json  vite.config.ts
webapp/benches/: audio_frame.json  benchmarks.rs  recordShortClip.html
webapp/scripts/: build.mjs  serve.mjs
webapp/src/: formantWorker.ts  lib.rs  main.ts  main.tsx
webapp/src/pkg/: webapp.d.ts
webapp/src/ui/: App.tsx  styles.css
