[package]
name = "ezformant"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "benchmarks"
harness = false
path = "benches/benchmarks.rs"

[dependencies]
rustfft = "6.2.0"
aberth = "0.4.1"
ndarray = "0.16.1"
criterion = {version = "0.5.1", default-features = false }
serde_json = "1.0.134"
serde = "1.0.216"



